src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>IT_Operation_Type__c</fullName>
        <label>Operation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Elimination Total</fullName>
                </value>
                <value>
                    <fullName>Partial Reversal</fullName>
                </value>
                <value>
                    <fullName>Cancellation and Re-issue</fullName>
                </value>
                <value>
                    <fullName>Document SOLA VAT</fullName>
                </value>
                <value>
                    <fullName>NDIM</fullName>
                </value>
                <value>
                    <fullName>Only Issue Invoice (eg. Invoice no fat)</fullName>
                </value>
                <value>
                    <fullName>Only Issue Credit Note (eg. For difference discount)</fullName>
                </value>
                <value>
                    <fullName>Note Refund Credit Ticket</fullName>
                </value>
                <value>
                    <fullName>Note Repayment Credit Welfare</fullName>
                </value>
                <value>
                    <fullName>Note Repayment Credit UTA</fullName>
                </value>
                <value>
                    <fullName>Note Repayment Credit Edenred ITALY FIN</fullName>
                </value>
                <value>
                    <fullName>Deposit Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Outcome__c</fullName>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Internal Feedback Waiting</fullName>
                </value>
                <value>
                    <fullName>Waiting for Client&apos;s Response</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Reopened</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Penalty__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(IT_Targetdate_Milestone__c)), IT_Targetdate_Milestone__c&lt; NOW()), 
			(TODAY() -  DATEVALUE(IT_Targetdate_Milestone__c)) * 
			    CASE(IT_Active_Milestone__c, &quot;IT Consegna di primo ordine&quot;, 200, 
												&quot;IT Invio utenze accesso portale - invio tabella finale dalla accettazione modulo&quot;, 100, 
												&quot;IT Ordini successivi&quot;, IT_Amount_OdA__c/1000,
												&quot;IT Primo ordine di ricarica Tessere&quot;, IT_Amount_OdA__c/1000,
												&quot;IT Ricezione Modulo allegato 2 integrazione locali convenzionati&quot;, IT_Amount_OdA__c/2000,
												0),   
			null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Penalty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IT_Priorit__c</fullName>
        <formula>CASE( IT_Milestone_Status__c,
&quot;1&quot;,IMAGE(&quot;https://er-italy--uat--c.visualforce.com/resource/1569404193000/GreenIcon&quot;,&quot;Green&quot;,20,20),
&quot;2&quot;,IMAGE(&quot;https://er-italy--uat--c.visualforce.com/resource/1569404194000/YellowIcon&quot;,&quot;Yellow&quot;,20,20),
&quot;3&quot;,IMAGE(&quot;https://er-italy--uat--c.visualforce.com/resource/1569404194000/RedIcon&quot;,&quot;Red&quot;,20,20),
&quot;4&quot;,IMAGE(&quot;https://er-italy--uat--c.visualforce.com/resource/1569404194000/TickIcon&quot;,&quot;Tick&quot;,20,20),
IMAGE(&quot;/resource/1569404193000/GreenIcon&quot;,&quot;Green&quot;,20,20)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Priority__c</fullName>
        <formula>CASE( IT_Milestone_Status__c,
        &quot;1&quot;,IMAGE(&quot;/resource/GreenIcon&quot;,&quot;Green&quot;,20,20),
        &quot;2&quot;,IMAGE(&quot;/resource/YellowIcon&quot;,&quot;Yellow&quot;,20,20),
        &quot;3&quot;,IMAGE(&quot;/resource/RedIcon&quot;,&quot;Red&quot;,20,20),
        &quot;4&quot;,IMAGE(&quot;/resource/TickIcon&quot;,&quot;Thick&quot;,20,20),
        &quot;&quot;
        )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_ProductTest__c</fullName>
        <defaultValue>&quot;Flexbenefit&quot;</defaultValue>
        <label>ProductTest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flexbenefit</fullName>
                    <default>true</default>
                    <label>Flexbenefit</label>
                </value>
                <value>
                    <fullName>Ticket Restaurant</fullName>
                </value>
                <value>
                    <fullName>Ticket Restaurant Smart</fullName>
                </value>
                <value>
                    <fullName>Ticket Welfare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Product__c</fullName>
        <formula>CASE(TEXT(IT_Financial_Center__r.IT_Service__c),
&quot;0V&quot;,&quot;FLEX TICKET RESTAURANT&quot;,
&quot;1G&quot;,&quot;COMPLIMENTS PREMIUM PROMO&quot;,
&quot;1F&quot;,&quot;COMPLIMENTS SELECTION PROMO&quot;,
&quot;1A&quot;,&quot;POSTEPAY LUNCH SMART&quot;,
&quot;0O&quot;,&quot;FLEX TICKET SERVICE CARD&quot;,
&quot;1B&quot;,&quot;FLEXBENEFIT&quot;,
&quot;0W&quot;,&quot;E-LUNCH SMART&quot;,
&quot;3&quot;,&quot;TICKET RESTAURANT&quot;,
&quot;4&quot;,&quot;TICKET SERVICE&quot;,
&quot;C&quot;,&quot;TICKET RESTAURANT CARD&quot;,
&quot;6&quot;,&quot;CLEAN WAY&quot;,
&quot;8&quot;,&quot;GRANT FRIEND&quot;,
&quot;9&quot;,&quot;TICKET TRANSPORT&quot;,
&quot;B&quot;,&quot;TICKET RESTAURANT GOLD&quot;,
&quot;D&quot;,&quot;TICKET RESTAURANT MAX&quot;,
&quot;F&quot;,&quot;DOMI PHONE&quot;,
&quot;G&quot;,&quot;PEOPLE ONE&quot;,
&quot;R&quot;,&quot;TICKET RESTAURANT SMART&quot;,
&quot;0G&quot;,&quot;COMPLIMENTS PREMIUM&quot;,
&quot;0F&quot;,&quot;COMPLIMENTS SELECTION&quot;,
&quot;0H&quot;,&quot;VIRTUAL COMPLIMENTS&quot;,
&quot;0I&quot;,&quot;TICKET SERVICE CARNET&quot;,
&quot;W&quot;,&quot;RISTOCHEF CARD&quot;,
&quot;0P&quot;,&quot;TICKET FAMILY&quot;,
&quot;0Q&quot;,&quot;TICKET CULTURE&quot;,
&quot;Z1&quot;,&quot;Edenred CUSTOMER ACCOUNTS&quot;,
&quot;Z2&quot;,&quot;Ristochef CUSTOMER ACCOUNTS&quot;,
&quot;Z3&quot;,&quot;E-LUNCH ACCOUNTING CLIENTS&quot;,
&quot;1W&quot;,&quot;FLEXBENEFIT REIMBURSMENT&quot;,
&quot;1X&quot;,&quot;TICKET WELFARE&quot;,
&quot;2A&quot;,&quot;RETEITALIA CARD&quot;,
&quot;2B&quot;,&quot;UTA CARD&quot;,
&quot;2F&quot;,&quot;COMPLIMENTS SELECTION eVouchers&quot;,
&quot;2G&quot;,&quot;COMPLIMENTS PREMIUM E-VOUCHER&quot;,
&quot;1D&quot;,&quot;TICKET TRANSPORT SMART&quot;,
&quot;1V&quot;,&quot;TICKET RESTAURANT MAX SMART&quot;,
&quot;0J&quot;,&quot;COMPLIMENTS SPENDING&quot;,
&quot;1N&quot;,&quot;FLEXBENEFIT SKILL&quot;,
&quot;1Q&quot;,&quot;FLEX TICKET SERVICE&quot;,
&quot;1R&quot;,&quot;TICKET RESTAURANT DIGITAL&quot;,
&quot;1Y&quot;,&quot;FLEXBENEFIT ALLOCATION OF FUNDS&quot;,
&quot;2K&quot;,&quot;COMPLIMENTS SEL. EASY eVouchers&quot;,
&quot;1Z&quot;,&quot;COMPLIMENTS EXPERIENCE PROMO&quot;,
&quot;2J&quot;,&quot;COMPLIMENTS EXPENSE E-VOUCHER&quot;,
&quot;0K&quot;,&quot;COMPLIMENTS EASY SELECTION&quot;,
&quot;2C&quot;,&quot;PARTNER ONLINE&quot;,
&quot;2X&quot;,&quot;VAT TICKET WELFARE&quot;,
&quot;1H&quot;,&quot;COMPLIMENTS EXPERIENCE&quot;,
&quot;1L&quot;,&quot;FLEXBENEFIT CHECK&quot;,
&quot;1M&quot;,&quot;FLEXBENEFIT CARE&quot;,
&quot;1S&quot;,&quot;CITY TIME PLUS SMART&quot;,
&quot;1T&quot;,&quot;CITY TIME PLUS (PRODOTTO CARTACEO)&quot;,
&quot;&quot;
)

/*IT_Financial_Center__r.IT_Product2__r.Name*/</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Provisioning__c</fullName>
        <label>Provisioning Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Forms Acceptance</fullName>
                </value>
                <value>
                    <fullName>Creation of a new Code</fullName>
                </value>
                <value>
                    <fullName>Take Charge</fullName>
                </value>
                <value>
                    <fullName>Details Plan Definition</fullName>
                </value>
                <value>
                    <fullName>Activation Kit Verification</fullName>
                </value>
                <value>
                    <fullName>Master Data Activation</fullName>
                </value>
                <value>
                    <fullName>Circuit Configuration</fullName>
                </value>
                <value>
                    <fullName>First Order Cards</fullName>
                </value>
                <value>
                    <fullName>First Order Ticket</fullName>
                </value>
                <value>
                    <fullName>First Order Ticket/Cards</fullName>
                </value>
                <value>
                    <fullName>Plan Configuration</fullName>
                </value>
                <value>
                    <fullName>Comunication To Client Sending</fullName>
                </value>
                <value>
                    <fullName>End</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Refund_Amount__c</fullName>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IT_Reissue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reissue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Requests__c</fullName>
        <formula>IT_Financial_Center__r.IT_Count_Request__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT_Sales_Manager__c</fullName>
        <formula>IT_Financial_Center__r.IT_Sales_Manager_txt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Split_Payment__c</fullName>
        <formula>Account.IT_Split_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Statement__c</fullName>
        <label>Statement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consip BPE 1</fullName>
                </value>
                <value>
                    <fullName>Consip BP 8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Targetdate_Milestone__c</fullName>
        <label>Targetdate Milestone</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IT_Team_Closing_Case__c</fullName>
        <label>Team closing case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Team_Opening_Case__c</fullName>
        <label>Team opening case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Today__c</fullName>
        <formula>DATETIMEVALUE(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IT Today</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IT_VAT_Number__c</fullName>
        <formula>Account.ER_VAT_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Welfare_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Welfare Project</label>
        <referenceTo>IT_Welfare_Project__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>IT_ProductTest__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Phone</value>
        </filters>
        <label>Tutti i casi aperti</label>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <columns>IT_Financial_Center__c</columns>
        <columns>IT_Product__c</columns>
        <columns>IT_Circuit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>Contabilit_Fatturazione</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.IT_Client_Support_Case_RT</value>
        </filters>
        <label>Contabilità Fatturazione</label>
    </listViews>
    <listViews>
        <fullName>Contabilit_Rimborsi</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.IT_Client_Support_Case_RT</value>
        </filters>
        <label>Contabilità Rimborsi</label>
    </listViews>
    <listViews>
        <fullName>IT_BACK_OFFICE_RED_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>IT BACK OFFICE RED</label>
        <queue>IT_BACK_OFFICE_RED</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_BACK_OFFICE_WHITE_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>IT BACK OFFICE WHITE</label>
        <queue>IT_BACK_OFFICE_WHITE</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Consip</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>IT_Penalty__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.IT_Client_Consip_Case_RT</value>
        </filters>
        <label>Consip</label>
    </listViews>
    <listViews>
        <fullName>IT_Distant_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Distant</label>
        <queue>IT_Distant</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_FINANCE_Fatturazione_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>FINANCE Fatturazione</label>
        <queue>IT_FINANCE_Fatturazione</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_FINANCE_Rimborsi_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>FINANCE Rimborsi</label>
        <queue>IT_FINANCE_Rimborsi</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_FRONT_OFFICE_RED_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>IT FRONT OFFICE RED</label>
        <queue>IT_FRONT_OFFICE_RED</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_PM_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>IT PM</label>
        <queue>IT_PM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_PROVISIONING_RED_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>IT PROVISIONING RED</label>
        <queue>IT_PROVISIONING_RED</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_PROVISIONING_WHITE_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>IT PROVISIONING WHITE</label>
        <queue>IT_PROVISIONING_WHITE</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Provisioning_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>IT_Priority__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>IT_Provisioning__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>IT_Product__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.IT_Client_Welfare_Provisioning_Case_RT</value>
        </filters>
        <label>IT Provisioning OLD</label>
        <queue>IT_Provisioning</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>ER_Client_Case_RT</fullName>
        <active>true</active>
        <businessProcess>Client Support</businessProcess>
        <description>Record Type for the Client Case</description>
        <label>ER Client Case RT</label>
    </recordTypes>
    <recordTypes>
        <fullName>ER_Merchant_Case_RT</fullName>
        <active>true</active>
        <businessProcess>Merchant Support</businessProcess>
        <description>Record Type for the Merchant Case</description>
        <label>ER Merchant Case RT</label>
    </recordTypes>
    <recordTypes>
        <fullName>ER_User_Case_RT</fullName>
        <active>true</active>
        <businessProcess>User Support</businessProcess>
        <description>Record Type for the User Case</description>
        <label>ER User Case RT</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_Client_Card_Provisioning_Case_RT</fullName>
        <active>true</active>
        <businessProcess>IT_Provisioning_Process</businessProcess>
        <label>IT Client Card Provisioning Case RT</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_Client_Consip_Case_RT</fullName>
        <active>true</active>
        <businessProcess>Client Support</businessProcess>
        <label>IT Client Consip Case RT</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_Client_Support_Case_RT</fullName>
        <active>true</active>
        <businessProcess>Support Process</businessProcess>
        <label>IT Client Support Case RT</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_Client_Ticket_Provisioning_Case_RT</fullName>
        <active>true</active>
        <businessProcess>IT_Provisioning_Process</businessProcess>
        <label>IT Client Ticket Provisioning Case RT</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_Client_Welfare_Provisioning_Case_RT</fullName>
        <active>true</active>
        <businessProcess>Support Process</businessProcess>
        <label>IT Client Welfare Provisioning Case RT</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VRER01_Case_CheckCaseReasonOnClose</fullName>
        <active>true</active>
        <description>When closing check if the fields &quot;Case Reason&quot; and &quot;Case Detailed Reason&quot;  are not empty.</description>
        <errorConditionFormula>AND( 
NOT($User.ER_BypassVR__c), 
ISCHANGED(Status), 
OR( 
ISPICKVAL(Status, &quot;Resolved&quot; ) 
), 
ISPICKVAL(ER_Reason__c, &quot;&quot; ), 
ISPICKVAL(ER_CaseReason2__c, &quot;&quot; ) 
)</errorConditionFormula>
        <errorMessage>These required fields must be completed: Case Reason, Case Detailed Reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRER02_Case_BusinessUnit</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
NOT($User.ER_BypassVR__c), 
TEXT(ER_BUPicklist__c) != TEXT($User.ER_Business_Unit__c),
NOT(ISBLANK(ER_Business_Unit__c ))
)</errorConditionFormula>
        <errorDisplayField>ER_BUPicklist__c</errorDisplayField>
        <errorMessage>You cannot use this Business Unit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRIT01_Block_Provisioning_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	$User.ER_BypassVR__c = False,
	ISPICKVAL($User.ER_Business_Unit__c , &quot;IT&quot;),
 RecordType.DeveloperName = &quot;IT_Client_Welfare_Provisioning_Case_RT&quot;,
 OR(
  AND(
   TEXT(IT_Provisioning__c) = &quot;&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;&quot;
  ),
  AND(
   TEXT(IT_Provisioning__c) = &quot;Take Charge&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Take Charge&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;&quot;
  ),
  AND(
   TEXT(IT_Provisioning__c) = &quot;Details Plan Definition&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Take Charge&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Details Plan Definition&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;&quot;
  ),
  AND(
   TEXT(IT_Provisioning__c) = &quot;Activation Kit Verification&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Take Charge&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Details Plan Definition&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Activation Kit Verification&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;&quot;
  ),
  AND(
   TEXT(IT_Provisioning__c) = &quot;Master Data Activation&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Take Charge&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Details Plan Definition&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Activation Kit Verification&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Master Data Activation&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;&quot;
  ),
  AND(
   TEXT(IT_Provisioning__c) = &quot;Circuit Configuration&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Take Charge&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Details Plan Definition&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Activation Kit Verification&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Master Data Activation&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Circuit Configuration&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;&quot;
  ),
  AND(
   TEXT(IT_Provisioning__c) = &quot;Plan Configuration&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Take Charge&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Details Plan Definition&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Activation Kit Verification&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Master Data Activation&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Circuit Configuration&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Plan Configuration&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;&quot;
  ),
  AND(
   TEXT(IT_Provisioning__c) = &quot;Comunication To Client Sending&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Take Charge&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Details Plan Definition&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Activation Kit Verification&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Master Data Activation&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Circuit Configuration&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Plan Configuration&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Comunication To Client Sending&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;&quot;
  ),
  AND(
   OR(
    TEXT(IT_Provisioning__c) = &quot;Circuit Configuration&quot;,
    TEXT(IT_Provisioning__c) = &quot;Plan Configuration&quot;,
    TEXT(IT_Provisioning__c) = &quot;Comunication To Client Sending&quot;
   ),
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Circuit Configuration&quot;,
   TEXT(IT_Financial_Center__r.IT_Client_Status__c) &lt;&gt; &quot;02&quot;
  ),
  AND(
   TEXT(IT_Provisioning__c) = &quot;Plan Configuration&quot;,
   TEXT(PRIORVALUE(IT_Provisioning__c)) &lt;&gt; &quot;Plan Configuration&quot;,
   ISBLANK(IT_Financial_Center__r.IT_Circuit__c)
  )
 )
)</errorConditionFormula>
        <errorMessage>You can&apos;t change Provisioning Status in this way</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRIT02_Case_Closed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

 $User.ER_BypassVR__c = False,
 ISPICKVAL($User.ER_Business_Unit__c , &apos;IT&apos;),

 ISPICKVAL( Status ,&apos;Closed&apos;),
 ISBLANK(TEXT( IT_Case_Reason__c )),
  RecordType.DeveloperName  &lt;&gt; &quot;IT_Client_Welfare_Provisioning_Case_RT&quot;			

)</errorConditionFormula>
        <errorMessage>You need to enter the field Case Reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRIT03_Case_Origin</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
 $User.ER_BypassVR__c = False,
 ISPICKVAL($User.ER_Business_Unit__c , &quot;IT&quot;),
 NOT(ISNEW()),
 ISCHANGED(Origin)
)</errorConditionFormula>
        <errorMessage>You can&apos;t change field &apos;Origin&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRER03_Asset_Case</fullName>
        <active>true</active>
        <description>Asset information is obligatory if the case reason equals &quot;Card&quot;</description>
        <errorConditionFormula>AND(RecordType.DeveloperName = &quot;ER_User_Case_RT&quot;, 
ISPICKVAL(ER_Reason__c ,&quot;ER_Card&quot;),
ISBLANK (AssetId ),
(NOT($User.ER_BypassVR__c)))</errorConditionFormula>
        <errorMessage>Information about Asset is obligatory in order to register the Case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRER04_Case_Reopening</fullName>
        <active>true</active>
        <description>Case can be reopen only with the status &quot;Reopen&quot;</description>
        <errorConditionFormula>AND(
NOT($User.ER_BypassVR__c),
ISPICKVAL(PRIORVALUE( Status),&apos;Resolved&apos;),
ISCHANGED(Status), 
NOT(ISPICKVAL( Status ,&quot;Reopen&quot;)
))</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>You can only reopen the case with correct value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRER05_Case_Queue_BusinessUnit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
     !ISNEW(),
     BEGINS(OwnerId, &quot;00G&quot;),
     ISCHANGED(OwnerId),
     AND(
          MID(Owner:Queue.Name, 3, 2)  !=  $User.ER_BUText__c ,
          LEFT(Owner:Queue.Name, 2)  !=  $User.ER_BUText__c
     )
)</errorConditionFormula>
        <errorMessage>Cannot assign to a Queue that is not belonging to your BU</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRIT04_Documentation_Outcome</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
				OR(
				ISPICKVAL( IT_Provisioning__c , &apos;Creation of a new Code&apos;) ,
								ISPICKVAL( IT_Provisioning__c , &apos;Master Data Activation&apos;),
								ISPICKVAL( IT_Provisioning__c , &apos;Circuit Configuration&apos;),
								ISPICKVAL( IT_Provisioning__c , &apos;First Order Cards&apos;),
								ISPICKVAL( IT_Provisioning__c , &apos;Comunication To Client Sending&apos;)
								),
			   ISBLANK(TEXT(IT_Documentation_Outcome__c)),
				 $RecordType.Name = &quot;IT Client Consip Case RT&quot;
)</errorConditionFormula>
        <errorMessage>The &apos;Documentation Outcome&apos; field must be populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRIT05_Refused</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
				OR(
					 ISPICKVAL(IT_Documentation_Outcome__c 	,&apos;&apos;) ,
								ISPICKVAL(IT_Documentation_Outcome__c 	,&apos;Refused&apos;)
								),
				 ISCHANGED(IT_Provisioning__c ),
$RecordType.Name = &quot;IT Client Consip Case RT&quot;
)</errorConditionFormula>
        <errorMessage>the &apos;Documentation Outcome&apos; field is Refused or empty, you can&apos;t change status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRIT05_Statement</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
			
				 ISBLANK(TEXT(IT_Statement__c )) ,
				OR(AND(
				 ISNEW(),
					$RecordType.Name = &quot;IT Client Consip Case RT&quot;
				), 
				AND(
								$RecordType.Name = &quot;IT Client Support Case RT&quot;,
	    CONTAINS(	TEXT(IT_Case_Reason__c),&apos;CONSIP&apos;) 
								))
)</errorConditionFormula>
        <errorDisplayField>IT_Statement__c</errorDisplayField>
        <errorMessage>It is necessary to insert the &apos;Statement&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRIT06_New_Customer_Code</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
				 IT_Reissue__c =true,
			  ISBLANK(IT_New_Customer_Code__c 	) 
				)</errorConditionFormula>
        <errorMessage>If &apos;reissue&apos; field is flagged,you have to enter &apos;New Customer Code&apos; type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRIT07_ReasonforSupport</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
$RecordType.Name = &quot;IT Client Support Case RT&quot;,
	CONTAINS(	TEXT(IT_Case_Reason__c),&apos;CONSIP&apos;) ,
				ISBLANK(TEXT(IT_Statement__c )) 
				 
			

)</errorConditionFormula>
        <errorMessage>It is necessary to insert the &apos;Statement&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRIT08_Documentation_Outcome</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$RecordType.Name = &quot;IT Client Consip Case RT&quot;,
 ISCHANGED( IT_Documentation_Outcome__c ),
				NOT( ISPICKVAL(IT_Provisioning__c,&apos;Forms Acceptance&apos; )) 


)</errorConditionFormula>
        <errorMessage>You cannot change the &apos;Documentation Outcome&apos; in this Provisioning Status</errorMessage>
    </validationRules>
</CustomObject>